Switching a time-based event to all day loses its timezone information
When creating an event it gets a timezone (usually the local one). However setting it all-day sets the timezone to UTC, essentially losing the timezone information. Disabling all day then leaves the timezone unset and shifting the event by the timezone discrepancy.
Link to original bug (#762949)
Related backend / specs compliance tip: #889 (comment 1672248)
Edited by Jeff Fortin